--- a/msg/tools/urtps_bridge_topics.yaml
+++ b/msg/tools/urtps_bridge_topics.yaml
@@ -46,6 +46,7 @@ rtps:
     receive: true
   - msg:     position_setpoint_triplet
     receive: true
+    send:    true
   - msg:     telemetry_status
     receive: true
   - msg:     timesync
@@ -88,4 +89,24 @@ rtps:
   - msg:     timesync_status
     send:    true
   - msg:     sensor_combined
+    send:    true
+  - msg:     vehicle_gps_position
+    send:    true
+  - msg:     vehicle_local_position
+    send:    true
+  - msg:     battery_status
+    send:    true
+  - msg:     navigator_mission_item
+    send:    true
+  - msg:     position_controller_status
+    send:    true
+  - msg:     px4io_status
+    send:    true
+  - msg:     actuator_controls
+    send:    true
+  - msg:     actuator_controls_0 # multi-topic / alias of vehicle_trajectory_waypoint
+    base:    actuator_controls
+    send:    true
+  - msg:     actuator_controls_3 # multi-topic / alias of vehicle_trajectory_waypoint
+    base:    actuator_controls
     send:    true
