complete velocity control function in commander.cpp

--- a/msg/tools/urtps_bridge_topics.yaml
+++ b/msg/tools/urtps_bridge_topics.yaml
@@ -119,6 +119,7 @@ rtps:
   - msg:     actuator_controls_1 # multi-topic / alias of vehicle_odometry
     base:    actuator_controls
     receive: true
+    send:    true
   - msg:     actuator_controls_2 # multi-topic / alias of vehicle_odometry
     base:    actuator_controls
     receive: true
