--- a/msg/tools/urtps_bridge_topics.yaml
+++ b/msg/tools/urtps_bridge_topics.yaml
@@ -112,6 +112,7 @@ rtps:
     receive: true
   - msg:     actuator_controls
     receive: true
+    send:    true
   - msg:     actuator_controls_0 # multi-topic / alias of vehicle_odometry
     base:    actuator_controls
     receive: true
@@ -125,3 +126,4 @@ rtps:
   - msg:     actuator_controls_3 # multi-topic / alias of vehicle_odometry
     base:    actuator_controls
     receive: true
+    send:    true
