Add log message topic on DDS

--- a/src/modules/uxrce_dds_client/dds_topics.yaml
+++ b/src/modules/uxrce_dds_client/dds_topics.yaml
@@ -29,10 +29,6 @@ publications:
   - topic: /fmu/out/position_controller_status
     type: px4_msgs::msg::PositionControllerStatus
 
-
-  # - topic: /fmu/out/vehicle_angular_velocity
-  #   type: px4_msgs::msg::VehicleAngularVelocity
-
   - topic: /fmu/out/vehicle_attitude
     type: px4_msgs::msg::VehicleAttitude
 
@@ -59,6 +55,9 @@ publications:
 
   - topic: /fmu/out/offboard_control_mode
     type: px4_msgs::msg::OffboardControlMode
+
+  - topic: /fmu/out/log_message
+    type: px4_msgs::msg::LogMessage
 
 subscriptions:
 
@@ -107,5 +106,3 @@ subscriptions:
   - topic: /fmu/in/vehicle_torque_setpoint
     type: px4_msgs::msg::VehicleTorqueSetpoint
     
-
-
